--- a/css/style.css
+++ b/css/style.css
@@ -536,8 +536,12 @@ h2 {
     text-decoration: none;
     color: #fff;
     background-color: #8acbce; }
-  @media (min-width: 1200px) {
-  col--lg-1 {
+
+.guitar {
+  background-image: url("../img/directions_card_guitar.jpg"); }
+
+@media (min-width: 1200px) {
+  .col--lg-1 {
     width: 25%; }
   .col--lg-2 {
     width: 50%; }
