--- a/scss/blocks/genres.scss
+++ b/scss/blocks/genres.scss
@@ -1,3 +1,16 @@
 .guitar {
 	background-image: url("../img/directions_card_guitar.jpg");
 }
+
+.vocal {
+	background-image: url(../img/directions_card_vocal.jpg);
+}
+
+.fortepiano {
+	background-image: url(../img/directions_card_fortepiano.jpg);
+}
+
+.lectures {
+	background-image: url(../img/directions_card_lectures.jpg);
+}
+
