--- a/css/style.css
+++ b/css/style.css
@@ -307,28 +307,6 @@ template {
 [hidden] {
   display: none; }
 
-/* pt-sans-regular - cyrillic_latin */
-@font-face {
-  font-family: 'PT Sans';
-  font-style: normal;
-  font-weight: 400;
-  src: local("PT Sans"), local("PTSans-Regular"), url("../fonts/pt-sans-v9-cyrillic_latin-regular.woff2") format("woff2"), url("../fonts/pt-sans-v9-cyrillic_latin-regular.woff") format("woff"); }
-
-/* pt-sans-700 - cyrillic_latin */
-@font-face {
-  font-family: 'PT Sans';
-  font-style: normal;
-  font-weight: 700;
-  src: local("PT Sans Bold"), local("PTSans-Bold"), url("../fonts/pt-sans-v9-cyrillic_latin-700.woff2") format("woff2"), url("../fonts/pt-sans-v9-cyrillic_latin-700.woff") format("woff");
-  /* Modern Browsers */ }
-
-/* prata-regular - cyrillic_latin */
-@font-face {
-  font-family: 'Prata';
-  font-style: normal;
-  font-weight: 400;
-  src: local("Prata Regular"), local("Prata-Regular"), url("../fonts/prata-v8-cyrillic_latin-regular.woff2") format("woff2"), url("../fonts/prata-v8-cyrillic_latin-regular.woff") format("woff"); }
-
 .container {
   max-width: 1200px;
   margin: auto;
@@ -343,10 +321,6 @@ template {
       flex-wrap: wrap;
   margin-left: -15px;
   margin-right: -15px; }
-
-.li {
-  text-decoration: none;
-  list-style: none; }
 
 .main-nav_list {
   display: -webkit-box;
@@ -461,30 +435,6 @@ template {
 @-ms-viewport {
   width: device-width; }
 
-@font-face {
-  font-family: 'Fira Sans Condensed';
-  font-style: normal;
-  font-weight: 400;
-  src: local("Fira Sans Condensed Regular"), local("FiraSansCondensed-Regular"), url("../fonts/fira-sans-condensed-v2-latin_cyrillic-regular.woff2") format("woff2"), url("../fonts/fira-sans-condensed-v2-latin_cyrillic-regular.woff") format("woff"); }
-
-@font-face {
-  font-family: 'Fira Sans Condensed';
-  font-style: italic;
-  font-weight: 400;
-  src: local("Fira Sans Condensed Italic"), local("FiraSansCondensed-Italic"), url("../fonts/fira-sans-condensed-v2-latin_cyrillic-italic.woff2") format("woff2"), url("../fonts/fira-sans-condensed-v2-latin_cyrillic-italic.woff") format("woff"); }
-
-@font-face {
-  font-family: 'Fira Sans Condensed';
-  font-style: normal;
-  font-weight: 700;
-  src: local("Fira Sans Condensed Bold"), local("FiraSansCondensed-Bold"), url("../fonts/fira-sans-condensed-v2-latin_cyrillic-700.woff2") format("woff2"), url("../fonts/fira-sans-condensed-v2-latin_cyrillic-700.woff") format("woff"); }
-
-@font-face {
-  font-family: 'Fira Sans Condensed';
-  font-style: italic;
-  font-weight: 700;
-  src: local("Fira Sans Condensed Bold Italic"), local("FiraSansCondensed-BoldItalic"), url("../fonts/fira-sans-condensed-v2-latin_cyrillic-700italic.woff2") format("woff2"), url("../fonts/fira-sans-condensed-v2-latin_cyrillic-700italic.woff") format("woff"); }
-
 html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -507,35 +457,37 @@ h2 {
   font-family: 'Prata';
   font-weight: 400; }
 
-.btn {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  display: inline-block;
-  vertical-align: middle;
-  margin: 0;
-  padding: 0;
-  white-space: nowrap;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  text-align: center;
-  font-size: 1em;
-  font-family: "Fira Sans Condensed", Helvetica Neue, sans-serif;
-  line-height: 1;
-  font-weight: 400;
+li,
+a {
   text-decoration: none;
-  text-transform: uppercase;
-  color: #fff;
-  border-radius: 3px;
-  border: none;
-  background-color: #8acbce;
-  background-image: none;
-  cursor: pointer; }
-  .btn:hover, .btn:focus {
-    text-decoration: none;
-    color: #fff;
-    background-color: #8acbce; }
+  list-style: none; }
+
+/* pt-sans-regular - cyrillic_latin */
+@font-face {
+  font-family: 'PT Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: local("PT Sans"), local("PTSans-Regular"), url("../fonts/pt-sans-v9-cyrillic_latin-regular.woff2") format("woff2"), url("../fonts/pt-sans-v9-cyrillic_latin-regular.woff") format("woff"); }
+
+/* pt-sans-700 - cyrillic_latin */
+@font-face {
+  font-family: 'PT Sans';
+  font-style: normal;
+  font-weight: 700;
+  src: local("PT Sans Bold"), local("PTSans-Bold"), url("../fonts/pt-sans-v9-cyrillic_latin-700.woff2") format("woff2"), url("../fonts/pt-sans-v9-cyrillic_latin-700.woff") format("woff");
+  /* Modern Browsers */ }
+
+/* prata-regular - cyrillic_latin */
+@font-face {
+  font-family: 'Prata';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Prata Regular"), local("Prata-Regular"), url("../fonts/prata-v8-cyrillic_latin-regular.woff2") format("woff2"), url("../fonts/prata-v8-cyrillic_latin-regular.woff") format("woff"); }
+
+.genres {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
 
 .guitar {
   background-image: url("../img/directions_card_guitar.jpg"); }
@@ -591,14 +543,6 @@ h2 {
   .col-11-lg {
     width: 91.66%; }
   .col-12-lg {
-    width: 100%; }
-  .features__list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap; }
-    .features__list .feature {
-      width: 33.33334%; } }
+    width: 100%; } }
 
 /*# sourceMappingURL=style.css.map */
