--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -8,15 +8,16 @@
 // $gray-lighter:                hsl(0, 0%, 80%);
 // $gray-lightest:               hsl(0, 0%, 90%);
 
-$color-main:                  #8acbce;
-$color-main-light:            lighten($color-main, 10%);
-$color-success:               #1d2354;
-$color-danger:                #633c98;
+$color-main:                   #eec643;
+// $color-main-light:            lighten($color-main, 10%);
+$color-black:              		 #021a23;
+$color-white:              		 #f9fcfc;
+$color-input:               	 #596063;
 // $color-warning:               hsl(35, 84%, 62%);
 
-$text-color:          #000;
+// $text-color:          #000;
 
-$font-family:         'Fira Sans Condensed', Helvetica Neue, sans-serif;
+// $font-family:         'Fira Sans Condensed', Helvetica Neue, sans-serif;
 
 $font-size:           16px;
 $font-size-h1:        32px;
