--- a/scss/blocks/main-nav.scss
+++ b/scss/blocks/main-nav.scss
@@ -1,1 +1,19 @@
-.main-nav {}
+.main-nav {
+	flex-grow: 1; 
+
+	&__item {
+		margin-left: 15px;
+		color: $color-black;
+
+		a {
+			color: inherit;
+			text-transform: uppercase;
+		}
+	}
+
+	&__list {
+		display: flex;
+		justify-content: flex-end;
+	}
+
+}
