--- a/scss/blocks/form.scss
+++ b/scss/blocks/form.scss
@@ -1,13 +1,34 @@
 .form {
 	background-color: #faf5e4;
-	border: 1px solid $color-black;
+	border: 2px solid $color-black;
 	height: 420px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 
-&__btn {
-	background-color: $color-black;
-	color: $color-white;
-	height: 70px;
-	width: 100%;
-	margin-top: 351px;
-}
+	h2,
+	p {
+		text-align: center;
+	}
+
+	h2 {
+		font-weight: bold;
+	}
+
+	&__btn {
+		background-color: $color-black;
+		color: $color-white;
+		height: 70px;
+		width: 100%;
+		font-size: 20px;
+		text-transform: uppercase;
+		border: none;
+	}
+
+	input,
+	select {
+		background-color: transparent;
+		border: none;
+		border-bottom: 1px solid #000;
+	}
 }
