--- a/scss/blocks/page-map.scss
+++ b/scss/blocks/page-map.scss
@@ -1,3 +1,33 @@
+.page-map {
+	margin-top: 90px;
+
+	h2 {
+		font-size: 50px;
+	}
+
 .map {
-	height: 400px;
+	height: 470px;
+}
+.form {
+
+	background-color: $color-white;
+	border: 2px solid $color-main;
+
+	&__btn {
+		background-color: $color-main;
+	}
+
+	input,
+	select {
+		border-bottom: 1px solid $color-main;
+	}
+
+	h2 {
+		color: $color-main;
+	}
+
+	p {
+		color: $color-black;
+	}
+}
 }
