--- a/css/style.css
+++ b/css/style.css
@@ -468,7 +468,7 @@ a {
     display: block;
     height: 525px;
     width: 2px;
-    left: 0px;
+    left: 30px;
     background-color: #eec643;
     padding-bottom: 40px; }
   .gallery__title:after {
@@ -477,7 +477,7 @@ a {
     display: block;
     height: 525px;
     width: 2px;
-    left: 95px;
+    left: 105px;
     background-color: #eec643;
     padding-top: 40px; }
   .gallery__item {
@@ -507,9 +507,33 @@ a {
     margin-top: auto; }
 
 .page-map {
-  margin-top: 90px; }
+  margin-top: 90px;
+  position: relative; }
+  .page-map__mapblock {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
   .page-map h2 {
-    font-size: 50px; }
+    font-size: 50px;
+    margin: 0; }
+  .page-map__title:before {
+    content: "";
+    background-color: #eec643;
+    height: 2px;
+    width: 50%;
+    position: absolute;
+    display: block;
+    top: -3px;
+    left: -10px; }
+  .page-map__title:after {
+    content: "";
+    background-color: #eec643;
+    height: 2px;
+    width: 50%;
+    position: absolute;
+    display: block;
+    bottom: -5px;
+    left: -10px; }
   .page-map .map {
     height: 470px; }
   .page-map .form {
@@ -528,6 +552,10 @@ a {
 .temp {
   color: #f9fcfc;
   position: relative; }
+  .temp h2 {
+    font-size: 50px;
+    margin-bottom: 30px;
+    margin-top: 0; }
   .temp__title {
     position: absolute;
     width: 100%;
@@ -557,7 +585,7 @@ a {
     width: 48%;
     position: absolute;
     display: block;
-    top: -5px;
+    top: -3px;
     left: -10px; }
   .temp__title:after {
     content: "";
@@ -616,7 +644,10 @@ a {
   display: flex;
   color: #f9fcfc;
   position: relative;
-  padding-top: 50px; }
+  padding-top: 50px;
+  margin-bottom: 50px; }
+  .genres h2 {
+    font-size: 50px; }
   .genres__title {
     color: #021a23; }
   .genres__title:before {
@@ -625,7 +656,7 @@ a {
     display: block;
     height: 525px;
     width: 2px;
-    left: -15px;
+    left: -1px;
     background-color: #eec643;
     padding-bottom: 40px; }
   .genres__title:after {
@@ -634,7 +665,7 @@ a {
     display: block;
     height: 525px;
     width: 2px;
-    left: 35px;
+    left: 58px;
     background-color: #eec643;
     padding-top: 40px; }
   .genres__card-inner--offset {
@@ -723,7 +754,7 @@ a {
     .gallery__title {
       position: absolute;
       bottom: 0px;
-      left: -25px;
+      left: -50px;
       -webkit-writing-mode: tb-rl;
           -ms-writing-mode: tb-rl;
               writing-mode: tb-rl;
@@ -732,7 +763,7 @@ a {
       .genres__title {
         position: absolute;
         bottom: 30px;
-        left: 20px;
+        left: -50px;
         -webkit-writing-mode: tb-rl;
             -ms-writing-mode: tb-rl;
                 writing-mode: tb-rl;
