--- a/scss/blocks/page-map.scss
+++ b/scss/blocks/page-map.scss
@@ -1,10 +1,15 @@
 .page-map {
 	margin-top: 90px;
-	position: relative;
 
 	
-	&__mapblock {
+
+	&__contact {
 		display: flex;
+		margin-bottom: 45px;
+	}
+
+	&__address {
+		padding-top: 10px;
 	}
 
 	h2 {
@@ -16,7 +21,7 @@
 		content: "";
 		background-color: $color-main;
 		height: 2px;
-		width: 50%;
+		width: 100%;
 		position: absolute;
 		display: block;
 		top: -3px;
@@ -27,7 +32,7 @@
 		content: "";
 		background-color: $color-main;
 		height: 2px;
-		width: 50%;
+		width: 100%;
 		position: absolute;
 		display: block;
 		bottom: -5px;
@@ -38,9 +43,11 @@
 
 .map {
 	height: 470px;
+	padding-left: 0;
 }
 .form {
-
+	height: 570px;
+	position: relative;
 	background-color: $color-white;
 	border: 2px solid $color-main;
 
@@ -55,6 +62,7 @@
 
 	h2 {
 		color: $color-main;
+		font-size: 30px;
 	}
 
 	p {
