--- a/scss/blocks/footer.scss
+++ b/scss/blocks/footer.scss
@@ -1,7 +1,5 @@
 .footer {
-	display: flex;
 	margin-top: 85px;
-	width: 100%;
 
 	&__logo {
 		color: $color-main;
@@ -18,6 +16,10 @@
 	&__item {
 		text-transform: uppercase;
 		margin-left: 15px;
+
+		a {
+			color: inherit;
+		}
 	}
 }
 }
