--- a/css/style.css
+++ b/css/style.css
@@ -660,24 +660,6 @@ a {
     font-size: 50px; }
   .genres__title {
     color: #021a23; }
-  .genres__title:before {
-    content: "";
-    position: absolute;
-    display: block;
-    height: 525px;
-    width: 2px;
-    left: -1px;
-    background-color: #eec643;
-    padding-bottom: 40px; }
-  .genres__title:after {
-    content: "";
-    position: absolute;
-    display: block;
-    height: 525px;
-    width: 2px;
-    left: 58px;
-    background-color: #eec643;
-    padding-top: 40px; }
   .genres__card-inner--offset {
     margin-left: 100px; }
   .genres__card {
@@ -730,6 +712,40 @@ a {
       margin-left: 15px; }
       .footer__socials__item a {
         color: inherit; }
+      @media (min-width: 320px) {
+    .form {
+      display: none; }
+    .main-nav {
+      display: none; }
+    .page-header {
+      height: auto; }
+    .promo {
+      width: 100%; }
+      .promo h1 {
+        width: 240px;
+        margin-left: 30px;
+        font-size: 30px;
+        margin-top: 0; }
+      .promo p {
+        width: 190px;
+        padding-left: 30px; }
+      .promo__btn {
+        width: 288px;
+        height: 60px;
+        background-color: #eec643;
+        margin-left: 30px;
+        padding: 18px;
+        margin-bottom: 32px; }
+        .promo__btn a {
+          text-align: center; }
+        .promo__btn h2 {
+          color: #f9fcfc;
+          margin: 0; }
+    .logo {
+      margin-left: 30px; } }
+      @media (min-width: 1200px) {
+    .promo__btn {
+      display: none; } }
       @media (min-width: 1280px) {
   .col-1 {
     width: 8.33%;
@@ -800,6 +816,26 @@ a {
             -ms-writing-mode: tb-rl;
                 writing-mode: tb-rl;
         -webkit-transform: rotate(180deg);
-                transform: rotate(180deg); } }
+                transform: rotate(180deg); }
+        .genres__title__title:before {
+          content: "";
+          position: absolute;
+          display: block;
+          height: 525px;
+          width: 2px;
+          left: -1px;
+          background-color: #eec643;
+          padding-bottom: 40px; }
+        .genres__title__title:after {
+          content: "";
+          position: absolute;
+          display: block;
+          height: 525px;
+          width: 2px;
+          left: 58px;
+          background-color: #eec643;
+          padding-top: 40px; }
+        .genres__title h2 {
+          font-size: 30px; } }
 
 /*# sourceMappingURL=style.css.map */
